--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -2,5 +2,6 @@
 <resources>
     <string-array name="xposed_scope">
         <item>com.android.launcher3</item>
+        <item>com.ndwill.swd.appstore</item>
     </string-array>
 </resources>
